--- a/Survey_analysis.html
+++ b/Survey_analysis.html
@@ -100,8 +100,9 @@
 
 										<h3><b>統計解析をご依頼の方へ</b></h3>
 										<p>
-											統計解析をご依頼の場合は、必ず検証したい仮説を発注時にご提示いただきます。
-											仮説のない分析依頼はお断りしておりますので、予めご了承ください。
+											仮説検証型の統計解析も承っております。
+											統計解析をご依頼の場合は、検証したい仮説を発注時にご提示ください。
+											（仮説のない分析依頼はお断りしております。予めご了承ください。）
 										</p>
 										</article>
 
