--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								</header>
 								<p>
 									集めたデータを生データのまま分析しようとしていませんか？
-									こちらでご紹介している後処理をご自身で行うのは難しいかもしれませんが、大丈夫、我々が対応いたします。
+									選択式回答の古典的なデータスクリーニング処理について、トピックごとに動画教材としてまとめました。
 								</p>
 								<ul class="divided icons col-6 col-12-mobile">
 									<li class="icon brands fa-youtube"><a href="https://www.youtube.com/watch?v=UA8XGq-TVEY&list=PLzacXZDB9RuoXj2T9uR70icNFEp5hTAXM">【トピック解説】データスクリーニング</a></li>
@@ -222,7 +222,7 @@
 						<div class="row gtr-0">
 							<ul class="divided icons col-12 col-12-mobile">
 								<li>1,000サンプル以下の調査テーマ1件について、提供サービスのすべてをご利用いただけます。<br /> 
-									一部サービスのみをご希望の場合は個別にお見積をご提示いたします。
+									一部のみもしくはサービス拡張をご希望の場合は別途お見積をご提示いたします。
 								</li>
 								<li>
 									データ収集・生成において得られた生データ（csv形式）、可視化ファイル（svg形式）、および結果レポートを納品いたします。
