--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					<section class="container">
 						<div class="row gtr-0">
 							<ul class="divided icons col-12 col-12-mobile">
-								<li>1,000サンプル以下の調査テーマ1件について、提供サービスのすべてをご利用いただけます。<br /> 
+								<li>1,000サンプル以下の調査テーマ1件（１ヶ月間）について、提供サービスのすべてをご利用いただけます。<br /> 
 									一部のみもしくはサービス拡張をご希望の場合は別途お見積をご提示いたします。
 								</li>
 								<li>
