--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Aska Intelligence Agency</title>
+		<title>AskUs-enterprise</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,7 +29,7 @@
 					<div id="header" class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Aska Intelligence</a></h1>
+							<h1 id="logo"><a href="index.html">AskUs-enterprise</a></h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -211,18 +211,20 @@
 				</div>
 
 			<!-- Pricing -->
-				<div id="promo-wrapper">
+				<div id="promo-wrapper-enterprise">
 					<p>提供価格</p>
 					<section id="promo">
-						<h2>総合サポートプラン</h2>
+						<h2>AskUs -ENTERPRISE-</h2>
 						<h2>¥200,000 (+税)</h2>
 						<p>（アンケートパネルは料金に含まれておりません）</p>
 					</section>
 					<section class="container">
 						<div class="row gtr-0">
 							<ul class="divided icons col-12 col-12-mobile">
-								<li>1,000サンプル以下の調査テーマ1件（１ヶ月間）について、提供サービスのすべてをご利用いただけます。<br /> 
-									一部のみもしくはサービス拡張をご希望の場合は別途お見積をご提示いたします。
+								<li>
+									Askaのアカウント登録は不要です（弊社で立ち上げを担当いたします）。<br /> 
+									1,000サンプル以下の調査テーマ1件（データ保存期間1年）について、提供サービスのすべてをご利用いただけます。<br /> 
+									一部サービスのみのご利用、サービス拡張、サポート期間延長のご要望がある場合は、その旨ご連絡ください。
 								</li>
 								<li>
 									データ収集・生成において得られた生データ（csv形式）、可視化ファイル（svg形式）、および結果レポートを納品いたします。
@@ -230,11 +232,30 @@
 							</ul>
 						</div>
 
-						<!-- <p>文章データはリッチですが、集めたからといってそれが必ず資産価値の高いデータとは限りません。
-						何の制御も構造化もされていない"野良のデータ"ではAI時代に活用できるデータにはなりません。</p>
-						<p>
-							将来的な活用に向けて価値の高いデータ収集を目指し、その可能性や限界についても冷静に判断するサポートをいたします。
-						</p> -->
+					</section>
+				</div>
+
+				<div id="promo-wrapper">
+					<p>格安プラン</p>
+					<section id="promo-light">
+						<h2>AskUs</h2>
+						<h2>¥30,000 (+税)</h2>
+						<p>（＊機密情報を含まない調査をご依頼の場合限定）</p>
+					</section>
+					<section class="container">
+						<div class="row gtr-0">
+							<ul class="divided icons col-12 col-12-mobile">
+								<li>
+									Askaのアカウント登録は不要です（弊社で立ち上げを担当いたします）。<br /> 
+									300サンプル以下の調査テーマ1件（保存期間1ヶ月間）について、データクレンジング以外の提供サービスをご利用いただけます。<br /> 
+									アンケートパネルも料金に含まれています（クラウドソーシングにて1日~２日募集）。
+								</li>
+								<li>
+									<a href="https://aska-intelligence.com/AskUs" class="button">詳しくはこちらをご覧ください</a>
+								</li>
+							</ul>
+						</div>
+
 					</section>
 				</div>
 
