--- a/index.html
+++ b/index.html
@@ -214,49 +214,89 @@
 				<div id="promo-wrapper-enterprise">
 					<p>提供価格</p>
 					<section id="promo">
-						<h2>AskUs -ENTERPRISE-</h2>
-						<h2>¥200,000 (+税)</h2>
-						<p>（アンケートパネルは料金に含まれておりません）</p>
+						<h2>AskUs -enterprise-</h2>
+						<h2>¥200,000 (税込)</h2>
 					</section>
 					<section class="container">
-						<div class="row gtr-0">
-							<ul class="divided icons col-12 col-12-mobile">
+						<div class="row">
+							<section class="col-12 col-12-narrower feature">
+								1,000サンプル以下の調査テーマ1件について、提供サービスのすべてをご利用いただけます。
+							</section>
+
+							<ul class="col-6 col-12-narrower feature">
 								<li>
-									Askaのアカウント登録は不要です（弊社で立ち上げを担当いたします）。<br /> 
-									1,000サンプル以下の調査テーマ1件（データ保存期間1年）について、提供サービスのすべてをご利用いただけます。<br /> 
-									一部サービスのみのご利用、サービス拡張、サポート期間延長のご要望がある場合は、その旨ご連絡ください。
+									Askaのアカウント登録は不要です（弊社でアカウント管理）。
 								</li>
 								<li>
 									データ収集・生成において得られた生データ（csv形式）、可視化ファイル（svg形式）、および結果レポートを納品いたします。
 								</li>
 							</ul>
+
+							<ul class="col-6 col-12-narrower feature">
+								<li>
+									一部サービスのみのご利用、サービス拡張、サポート期間延長のご要望がある場合は、その旨ご連絡ください。
+								</li>
+								<li>
+									アンケートパネルは他社パネルをご利用の場合、他社システムと連携いたします。ご用意がない場合は、クラウドソーシングによるデータ収集を承ります。
+								</li>
+							</ul>
+
+							<p class="col-12 col-12-narrower feature">
+								下記お問合せフォームよりお問い合わせください。
+							</p>
+
 						</div>
 
 					</section>
 				</div>
 
-				<div id="promo-wrapper">
-					<p>格安プラン</p>
-					<section id="promo-light">
-						<h2>AskUs</h2>
-						<h2>¥30,000 (+税)</h2>
-						<p>（＊機密情報を含まない調査をご依頼の場合限定）</p>
-					</section>
-					<section class="container">
-						<div class="row gtr-0">
-							<ul class="divided icons col-12 col-12-mobile">
-								<li>
-									Askaのアカウント登録は不要です（弊社で立ち上げを担当いたします）。<br /> 
-									300サンプル以下の調査テーマ1件（保存期間1ヶ月間）について、データクレンジング以外の提供サービスをご利用いただけます。<br /> 
-									アンケートパネルも料金に含まれています（クラウドソーシングにて1日~２日募集）。
-								</li>
-								<li>
-									<a href="https://aska-intelligence.com/AskUs" class="button">詳しくはこちらをご覧ください</a>
-								</li>
-							</ul>
-						</div>
 
-					</section>
+				<div id="promo-wrapper" class="wrapper">
+					<div class="container">
+						<div class="row">
+							<section class="col-6 col-12-narrower feature">
+								<p>格安プラン</p>
+								<section id="promo-light">
+									<h2>AskUs</h2>
+									<h2>¥30,000 (税込)</h2>
+									<p>（データ利用に関する許諾条件あり）</p>
+								</section>
+								<section class="container">
+									<div class="row gtr-0">
+										<ul class="divided icons col-12 col-12-mobile">
+											<li>
+												収集したデータを当社が利用・公開・販売することを許諾していただく代わりに、AskUs-enterpriseを<strong>格安で提供するサービス</strong>です。データ収集方法はクラウドソーシングに限定されます。
+											</li>
+											<li>
+												<a href="https://aska-intelligence.com/AskUs" class="button">詳しくはこちらをご覧ください</a>
+											</li>
+										</ul>
+									</div>
+								</section>
+							</section>
+
+							<section class="col-6 col-12-narrower feature">
+								<p>トピック買きり</p>
+								<section id="promo-light">
+									<h2>Alaska Plus</h2>
+									<h2>¥3,000 (税込)</h2>
+									<p>（トピックURLのみのご提供）</p>
+								</section>
+								<section class="container">
+									<div class="row gtr-0">
+										<ul class="divided icons col-12 col-12-mobile">
+											<li>
+												アカウント登録不要で<strong>AIアンケートシミュレーター</strong>および<strong>Askaのミニマルモデル（Alaska）</strong>がご利用可能なパックです。データ収集代行や分析処理等のサポートは含まれておりません。
+											</li>
+											<li>
+												<a href="https://survey-simulator.studio.site/" class="button">詳しくはこちらをご覧ください</a>
+											</li>
+										</ul>
+									</div>
+								</section>
+							</section>
+						</div>
+					</div>
 				</div>
 
 			<!-- Footer -->
