--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 							</ul>
 
 							<p class="col-12 col-12-narrower feature">
-								下記お問合せフォームよりお問い合わせください。
+								ご相談・詳細資料のご請求については、下記お問合せフォームよりお問い合わせください。
 							</p>
 
 						</div>
