--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
+		<!-- OGP meta tags -->
+		<meta property="og:title" content="AskUs-enterprise" />
+		<meta property="og:description" content="次世代技術を用いて、資産価値の高いデータを収集しましょう" />
+		<meta property="og:image" content="images/Aska_survey.jpg" />
+		<meta property="og:url" content="https://aska-intelligence.com/AskUs-enterprise/" />
+
 		<style>
 			.success-message {
 			  display: none;
